--- a/test2/index.html
+++ b/test2/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>ycle.</title>
 </head>
 
 <body>
@@ -16,17 +17,24 @@
         <div class="main">
             <nav>
                 <a href="" class="arrow_right">&#10145;</a>
-                <a href="">HOME</a>
-                <a href="">WE</a>
-                <a href="">GALLERY</a>
-                <a href="">CONTACT</a>
+                <a href="#s1">HOME</a>
+                <a href="#s2">WE</a>
+                <a href="#s1">CONTACT</a>
+                <a href="#s3">JOIN</a>
                 <a href="" class="arrow">&#11013;</a>
             </nav>
         </div>
-        <div class="s1"></div>
+        <div class="s1">
+            <div id="photos">
+                <img src="./ycle14.jpg">
+            </div>
+        </div>
     </div>
     <div class="container2">
-        <div class="s2"></div>
+        <div class="s2">
+            <div class="s2a"></div>
+            <div class="s2b"></div>
+        </div>
         <div class="s3"></div>
     </div>
     <div class="container3">
