--- a/test2/index.html
+++ b/test2/index.html
@@ -26,21 +26,68 @@
         </div>
         <div class="s1">
             <div id="photos">
-                <img src="./ycle14.jpg">
+                <img src="./Img/ycle14.jpg">
+            </div>
+            <div id="photos">
+                <img src="./Img/ycle1.jpg">
+            </div>
+            <div id="photos">
+                <img src="./Img/ycle13.jpg">
+            </div>
+            <div id="photos">
+                <img src="./Img/ycle2.jpg">
+            </div>
+            <div id="photos">
+                <img src="./Img/ycle12.jpg">
+            </div>
+            <div id="photos">
+                <img src="./Img/ycle3.jpg">
+            </div>
+            <div id="photos">
+                <img src="./Img/ycle11.jpg">
+            </div>
+            <div id="photos">
+                <img src="./Img/ycle4.png">
+            </div>
+            <div id="photos">
+                <img src="./Img/ycle10.png">
+            </div>
+            <div id="photos">
+                <img src="./Img/ycle5.jpg">
+            </div>
+            <div id="photos">
+                <img src="./Img/ycle9.jpg">
+            </div>
+            <div id="photos">
+                <img src="./Img/ycle6.png">
+            </div>
+            <div id="photos">
+                <img src="./Img/ycle8.jpg">
+            </div>
+            <div id="photos">
+                <img src="./Img/ycle7.jpg">
             </div>
         </div>
-    </div>
-    <div class="container2">
-        <div class="s2">
-            <div class="s2a"></div>
-            <div class="s2b"></div>
-        </div>
-        <div class="s3"></div>
-    </div>
-    <div class="container3">
-        <div class="s4"></div>
+        <div class="container2">
+            <div class="s2">
 
-    </div>
+                <div id="s2a">.WE RECYCLE, YOU RECYCLE!</div>
+                <div id="s2b">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ipsam omnis, dolore qui provident quia ad, quas amet accusantium dolorem consequatur maxime facere ab, ut totam deleniti doloremque esse eligendi.</div>
+            </div>
+            <div class="s3">
+                <h2>JOIN.</h2>
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste possimus, eaque nemo officia officiis voluptatum vero, commodi eligendi eum unde dolorem iure laborum voluptate id alias deleniti recusandae itaque quaerat.</P>
+            </div>
+        </div>
+        <div class="container3">
+            <div class="s4a">
+                <P id="contact">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, error, nam necessitatibus, facere amet optio totam dicta distinctio voluptatibus qui mollitia reiciendis. Maiores debitis eligendi nam provident doloremque beatae magnam.</P>
+            </div>
+            <div class="s4b">
+                <P id="polity">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, error, nam necessitatibus, facere amet optio totam dicta distinctio voluptatibus qui mollitia reiciendis. Maiores debitis eligendi nam provident doloremque beatae magnam.</P>
+            </div>
+
+        </div>
 
 
 </body>
