--- a/test2/index.html
+++ b/test2/index.html
@@ -17,10 +17,10 @@
         <div class="main">
             <nav>
                 <a href="" class="arrow_right">&#10145;</a>
-                <a href="#s1">HOME</a>
-                <a href="#s2">WE</a>
-                <a href="#s1">CONTACT</a>
-                <a href="#s3">JOIN</a>
+                <a href="#photos">HOME</a>
+                <a href="#we">WE</a>
+                <a href="#contact">CONTACT</a>
+                <a href="#join">JOIN</a>
                 <a href="" class="arrow">&#11013;</a>
             </nav>
         </div>
@@ -69,22 +69,31 @@
             </div>
         </div>
         <div class="container2">
-            <div class="s2">
+            <div class="s2" id="we">
 
                 <div id="s2a">.WE RECYCLE, YOU RECYCLE!</div>
-                <div id="s2b">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ipsam omnis, dolore qui provident quia ad, quas amet accusantium dolorem consequatur maxime facere ab, ut totam deleniti doloremque esse eligendi.</div>
+                <div id="s2b">We are a company that recycles, we produce everything from tuppers to sneakers. We promote recycling and effective design of recycled products throughout our community.</div>
             </div>
             <div class="s3">
-                <h2>JOIN.</h2>
-                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste possimus, eaque nemo officia officiis voluptatum vero, commodi eligendi eum unde dolorem iure laborum voluptate id alias deleniti recusandae itaque quaerat.</P>
+                <h2 id="join">JOIN.</h2>
+                <P>Join our community! we are +100,000! Enjoy the power of recycling with household materials. The "ycle" community is a space created to promote recycling.</P>
+                <div id="join2">
+                    <form action="./pages/page_log-reg.html"> <button>Login</button></form>
+                    <form action="./pages/page_reg.html"> <button>Register</button></form>
+                </div>
             </div>
         </div>
         <div class="container3">
             <div class="s4a">
-                <P id="contact">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, error, nam necessitatibus, facere amet optio totam dicta distinctio voluptatibus qui mollitia reiciendis. Maiores debitis eligendi nam provident doloremque beatae magnam.</P>
+                <p id="contact">
+                    &#128172; contact us via email: ycle@ycle.com - &#128222; 54912312345 - &#128242; social media: @ycle
+                </p>
             </div>
             <div class="s4b">
-                <P id="polity">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, error, nam necessitatibus, facere amet optio totam dicta distinctio voluptatibus qui mollitia reiciendis. Maiores debitis eligendi nam provident doloremque beatae magnam.</P>
+                <P id="polity">
+                    Community Policies/Standards: People can report potentially infringing content, including pages, groups, profiles, individual content, and comments. We also give you control over your own experience by allowing you to block, unfollow, or hide people and
+                    posts.
+                </p>
             </div>
 
         </div>
